deploy/overlays/local/node-zio/components/portal-gateway/portal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: zio-portal-gateway
  namespace: dh-health
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: portal.zio.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zio-portal-route
  namespace: dh-health
spec:
  parentRefs:
    - name: zio-portal-gateway
  hostnames:
    - portal.zio.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zio-portal
          port: 3000
